2001-04-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_config.c: Add the "allan" tinker variable.
	From: Juha Sarlin <juha@c3l.tyreso.se>

	* ntpd/refclock_hopfpci.c (hopfpci_start): Lose the "correct_any"
	stuff - it's both obsolete and wrong.

	* ntpd/ntp_proto.c (receive): Keep track of packet versions.
	Implement RES_LIMITED.
	* include/ntp_config.h (CONF_RES_LIMITED): 
	* include/ntp.h (RES_LIMITED): Leave the bits in the original
	order.
	From Dave Mills.

	* util/timetrim.c:
	* util/Makefile.am:
	* ntpdc/ntpdc_ops.c:
	* ntpd/refclock_nmea.c:
	* libntp/snprintf.c:
	* configure.in:
	* configure:
	* config.h.in:
	* aclocal.m4:
	* acconfig.h:
	Lint cleanup from: Marc Brett <mbrett@rgs0.london.waii.com>

	* ntpd/ntp_config.c: Add "version" support.
	(getconfig): version support.
	* include/ntp_config.h (CONF_RES_VERSION): Added.
	* include/ntp.h (RES_VERSION): Added.
	From: Dave Mills.

	* include/ntp_machine.h (ifreq): WinNT cleanup

2001-04-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k29

	* html/miscopt.htm: Document the "allan" tinker variable.
	* ntpd/ntp_proto.c (clock_filter): Update comments.  Lose etemp;
	we now use allan_xpt for this.
	* ntpd/ntp_loopfilter.c: Added allan_xpt as a tinker variable.
	Reorganize variables and improve comments.
	(local_clock): Improve comments, use (new) allan_xpt instead of
	CLOCK_ALLAN.  Fix test in S_SYNC state.  Update debug info.
	(rstclock): No longer force allan_xpt to CVLOCK_ALLAN in S_FREQ,
	S_SYNC, or default case.
	(loop_config): Document dangerous tinker variables, and add
	LOOP_ALLAN to the list.
	* include/ntp_config.h (CONF_CLOCK_ALLAN): Added.
	* include/ntp.h (LOOP_ALLAN): Added.
	Allan intercept fixes from Dave Mills.

	* scripts/mkver.in: Use the C locale so  the dates come out in a
	consistent format.
	From: ASANO Naoyuki <n_asano@imjp.co.jp>

	* build: Run "config.status" before the "make" because it probably
	saves time and trouble.  Probably...
